euler_problem10_solved

--- a/euler.ipynb
+++ b/euler.ipynb
@@ -484,15 +484,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 22.06.２2 (수) problem10 ★★★★☆\n",
     "# 이백만 이하 소수의 합\n",
     "# 10 이하의 소수를 모두 더하면 2 + 3 + 5 + 7 = 17 이 됩니다.\n",
-    "# 이백만(2,000,000) 이하 소수의 합은 얼마입니까?"
+    "# 이백만(2,000,000) 이하 소수의 합은 얼마입니까?\n",
+    "\n",
+    "\n",
+    "# n= [3,2000000]\n",
+    "# for i in range (3,2000000): \n",
+    "#     if n % i ==0:\n",
+    "#         sum=sum+i\n",
+    "# print(sum)\n",
+    "\n",
+    "# import time\n",
+    "# sum = 2\n",
+    "# start = time.time()\n",
+    "# for number in range(3,2000000):\n",
+    "#     prime = True\n",
+    "#     for x in range (2,number):\n",
+    "#         if number % x ==0:\n",
+    "#             prime =False\n",
+    "#     if prime:\n",
+    "#         sum = sum + number\n",
+    "# print (sum)\n",
+    "\n",
+    "\n",
+    "# The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17.\n",
+    "# Find the sum of all the primes below two million.\n",
+    "# returns True if parameter n is a prime number, \n",
+    "# False if composite and \"Neither prime, nor composite\" if neither\n",
+    "\n",
+    "def isPrime(n):\n",
+    "    if n<2: \n",
+    "        return \"Neither prime, nor composite\"\n",
+    "    # 약수는 짝꿍이루므로 중간값까지 구하기. 루트 씌운 값이 중간값이 됨. \n",
+    "    for i in range(2, int(n**0.5)+1):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "sum = 0\n",
+    "for i in range(2,2000000):\n",
+    "    if isPrime(i):\n",
+    "        sum += i\n",
+    "\n",
+    "print(sum)\n",
+    "        \n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
