euler_problem5_solved

--- a/euler.ipynb
+++ b/euler.ipynb
@@ -242,19 +242,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "error\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 22.06.17 (금) problem5\n",
+    "# 22.06.17 (금) problem5 ★★★★☆\n",
     "# 1 ~ 10 사이의 어떤 수로도 나누어 떨어지는 가장 작은 수는 2520입니다.\n",
     "# 그러면 1 ~ 20 사이의 어떤 수로도 나누어 떨어지는 가장 작은 수는 얼마입니까?\n",
     "\n",
@@ -263,23 +255,22 @@
     "# 왜냐면 홀수는 2로 안 나눠지므로 홀수는 제외이므로. \n",
     "# +2씩 갈거임\n",
     "\n",
-    "# 구선생님이 풀어줄거임.\n",
-    "i = 0\n",
-    "i_limit = 2521\n",
-    "\n",
+    "# 구쌤 소스.\n",
+    "a = 20\n",
+    "b = []\n",
     "while True:\n",
-    "       i += 1\n",
-    "       count = 0\n",
-    "       for j in range(1,11):\n",
-    "              if i // j == 0:\n",
-    "                  count += 1\n",
-    "              elif count == 10:\n",
-    "                     print(i)\n",
-    "                     break\n",
-    "\n",
-    "       if i >= i_limit:\n",
-    "              print(\"error\")\n",
-    "              break\n"
+    "    for num in range(1,21):\n",
+    "        if a%num == 0:\n",
+    "            b.append(num)\n",
+    "            #print (b)\n",
+    "    if len(b) == 20:\n",
+    "        print (a)\n",
+    "        print (b)\n",
+    "        break\n",
+    "    else :\n",
+    "        a += 20\n",
+    "        #print(a)\n",
+    "        b = []\n"
    ]
   },
   {
@@ -484,9 +475,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "142913828922\n"
+     ]
+    }
+   ],
    "source": [
     "# 22.06.２2 (수) problem10 ★★★★☆\n",
     "# 이백만 이하 소수의 합\n",
