--- a/euler.ipynb
+++ b/euler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,24 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "8\n",
-      "16\n",
-      "29\n",
-      "50\n",
-      "84\n",
-      "139\n",
-      "228\n",
-      "372\n",
-      "605\n",
-      "982\n"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 13 (1234143907.py, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [4]\u001b[1;36m\u001b[0m\n\u001b[1;33m    sum = sum + c\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'if' statement on line 13\n"
      ]
     }
    ],
@@ -74,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -242,9 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "232792560\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
    "source": [
     "# 22.06.17 (금) problem5 ★★★★☆\n",
     "# 1 ~ 10 사이의 어떤 수로도 나누어 떨어지는 가장 작은 수는 2520입니다.\n",
@@ -275,14 +275,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25164150\n",
       "25164150\n"
      ]
     }
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -453,6 +452,8 @@
     "# 세 자연수 a, b, c 가 피타고라스 정리 a2 + b2 = c2 를 만족하면 피타고라스 수라고 부릅니다 (여기서 a < b < c ).\n",
     "# 예를 들면 3**2 + 4**2 = 9 + 16 = 25 = 5**2이므로 3, 4, 5는 피타고라스 수입니다.\n",
     "# a + b + c = 1000 인 피타고라스 수 a, b, c는 한 가지 뿐입니다. 이 때, a × b × c 는 얼마입니까?\n",
+    "# 답 \n",
+    "- print([a*b*(1000-a-b) for a in range(1, 1000) for b in range(a+1, 1000)  if a*a+b*b==(1000-a-b)**2])\n",
     "\n",
     "# a = int()\n",
     "# b = int()\n",
@@ -475,7 +476,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[31875000]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -533,6 +549,187 @@
     "\n",
     "print(sum)\n",
     "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "104743\n"
+     ]
+    }
+   ],
+   "source": [
+    "#에라토스 테네스의 체 problem7\n",
+    "def prime_list(n):\n",
+    "    # 에라토스테네스의 체 초기화: n개 요소에 True 설정(소수로 간주)\n",
+    "    sieve = [True] * n\n",
+    "\n",
+    "    # n의 최대 약수가 sqrt(n) 이하이므로 i=sqrt(n)까지 검사\n",
+    "    m = int(n ** 0.5)\n",
+    "    for i in range(2, m + 1):\n",
+    "        if sieve[i] == True:           # i가 소수인 경우\n",
+    "            for j in range(i+i, n, i): # i이후 i의 배수들을 False 판정\n",
+    "                sieve[j] = False\n",
+    "\n",
+    "    # 소수 목록 산출\n",
+    "    return [i for i in range(2, n) if sieve[i] == True]\n",
+    "a = prime_list(1000001)\n",
+    "\n",
+    "if len(a) > 10002:\n",
+    "    print(a[10000])\n",
+    "# print(prime_list(10002))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '08 02 22 97 38 15 00 40 00 75 04 05 07 78 52 12 50 77 91 08\\n49 49 99 40 17 81 18 57 60 87 17 40 98 43 69 48 04 56 62 00\\n81 49 31 73 55 79 14 29 93 71 40 67 53 88 30 03 49 13 36 65\\n52 70 95 23 04 6",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\4028\\Documents\\python\\lesson1\\euler.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 28>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=0'>1</a>\u001b[0m \u001b[39m# 22.06.25 (토) problem11 ★★★★★\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=1'>2</a>\u001b[0m \u001b[39m# 20×20 격자에서 연속된 네 수의 곱 중 최댓값\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=2'>3</a>\u001b[0m \u001b[39m# 아래와 같은 20×20 격자가 있습니다.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=3'>4</a>\u001b[0m \u001b[39m# 위에서 대각선 방향으로 연속된 붉은 수 네 개의 곱은 26 × 63 × 78 × 14 = 1788696 입니다.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=4'>5</a>\u001b[0m \u001b[39m# 그러면 수평, 수직, 또는 대각선 방향으로 연속된 수 네 개의 곱 중 최댓값은 얼마입니까?\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=6'>7</a>\u001b[0m number \u001b[39m=\u001b[39m \u001b[39m'''\u001b[39m\u001b[39m08 02 22 97 38 15 00 40 00 75 04 05 07 78 52 12 50 77 91 08\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=7'>8</a>\u001b[0m \u001b[39m49 49 99 40 17 81 18 57 60 87 17 40 98 43 69 48 04 56 62 00\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=8'>9</a>\u001b[0m \u001b[39m81 49 31 73 55 79 14 29 93 71 40 67 53 88 30 03 49 13 36 65\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=24'>25</a>\u001b[0m \u001b[39m20 73 35 29 78 31 90 01 74 31 49 71 48 86 81 16 23 57 05 54\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=25'>26</a>\u001b[0m \u001b[39m01 70 54 71 83 51 54 69 16 92 33 48 61 43 52 01 89 19 67 48\u001b[39m\u001b[39m'''\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=27'>28</a>\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39;49m(number),number\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m)))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=28'>29</a>\u001b[0m start \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000001?line=29'>30</a>\u001b[0m method \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '08 02 22 97 38 15 00 40 00 75 04 05 07 78 52 12 50 77 91 08\\n49 49 99 40 17 81 18 57 60 87 17 40 98 43 69 48 04 56 62 00\\n81 49 31 73 55 79 14 29 93 71 40 67 53 88 30 03 49 13 36 65\\n52 70 95 23 04 6"
+     ]
+    }
+   ],
+   "source": [
+    "# 22.06.25 (토) problem11 ★★★★★\n",
+    "# 20×20 격자에서 연속된 네 수의 곱 중 최댓값\n",
+    "# 아래와 같은 20×20 격자가 있습니다.\n",
+    "# 위에서 대각선 방향으로 연속된 붉은 수 네 개의 곱은 26 × 63 × 78 × 14 = 1788696 입니다.\n",
+    "# 그러면 수평, 수직, 또는 대각선 방향으로 연속된 수 네 개의 곱 중 최댓값은 얼마입니까?\n",
+    "\n",
+    "number = '''08 02 22 97 38 15 00 40 00 75 04 05 07 78 52 12 50 77 91 08\n",
+    "49 49 99 40 17 81 18 57 60 87 17 40 98 43 69 48 04 56 62 00\n",
+    "81 49 31 73 55 79 14 29 93 71 40 67 53 88 30 03 49 13 36 65\n",
+    "52 70 95 23 04 60 11 42 69 24 68 56 01 32 56 71 37 02 36 91\n",
+    "22 31 16 71 51 67 63 89 41 92 36 54 22 40 40 28 66 33 13 80\n",
+    "24 47 32 60 99 03 45 02 44 75 33 53 78 36 84 20 35 17 12 50\n",
+    "32 98 81 28 64 23 67 10 26 38 40 67 59 54 70 66 18 38 64 70\n",
+    "67 26 20 68 02 62 12 20 95 63 94 39 63 08 40 91 66 49 94 21\n",
+    "24 55 58 05 66 73 99 26 97 17 78 78 96 83 14 88 34 89 63 72\n",
+    "21 36 23 09 75 00 76 44 20 45 35 14 00 61 33 97 34 31 33 95\n",
+    "78 17 53 28 22 75 31 67 15 94 03 80 04 62 16 14 09 53 56 92\n",
+    "16 39 05 42 96 35 31 47 55 58 88 24 00 17 54 24 36 29 85 57\n",
+    "86 56 00 48 35 71 89 07 05 44 44 37 44 60 21 58 51 54 17 58\n",
+    "19 80 81 68 05 94 47 69 28 73 92 13 86 52 17 77 04 89 55 40\n",
+    "04 52 08 83 97 35 99 16 07 97 57 32 16 26 26 79 33 27 98 66\n",
+    "88 36 68 87 57 62 20 72 03 46 33 67 46 55 12 32 63 93 53 69\n",
+    "04 42 16 73 38 25 39 11 24 94 72 18 08 46 29 32 40 62 76 36\n",
+    "20 69 36 41 72 30 23 88 34 62 99 69 82 67 59 85 74 04 36 16\n",
+    "20 73 35 29 78 31 90 01 74 31 49 71 48 86 81 16 23 57 05 54\n",
+    "01 70 54 71 83 51 54 69 16 92 33 48 61 43 52 01 89 19 67 48'''\n",
+    "\n",
+    "data = list(map(int(number),number.split(' ')))\n",
+    "start = 0\n",
+    "method = ''\n",
+    "result = 0\n",
+    "for i in range(len(data)):\n",
+    "    if i < (len(data)-60): # Vertical\n",
+    "        if data[i] * data[i + 20] * data[i + 40] * data[i + 60] > result:\n",
+    "            result = data[i]*data[i + 10]*data[i + 20]*data[i + 30]\n",
+    "            start = data[i]\n",
+    "            method = 'Vertical'\n",
+    "    if i % 20 < 17: # Horizontal\n",
+    "        if data[i] * data[i + 1] * data[i + 2] * data[i + 3] > result:\n",
+    "            result = data[i] * data[i + 1] * data[i + 2] * data[i + 3]\n",
+    "            start = data[i]\n",
+    "            method = 'Horizontal'\n",
+    "    if i % 20 < 17 and i <= 336: # diagonal right\n",
+    "        if data[i] * data[i + 21] * data[i + 42] * data[i + 63] > result:\n",
+    "            result = data[i] * data[i + 21] * data[i + 42] * data[i + 63]\n",
+    "            start = data[i]\n",
+    "            method = 'Diagonal right'\n",
+    "    if i % 20 > 2 and i <= 339:\n",
+    "        if data[i] * data[i + 19] * data[i + 38] * data[i + 57] > result:\n",
+    "            result = data[i] * data[i + 19] * data[i + 38] * data[i + 57]\n",
+    "            start = data[i]\n",
+    "            method = 'Diagonal left'\n",
+    "    print([result,start,method])\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 22.06.26 (일) problem12 ★★★★★\n",
+    "# 1부터 n까지의 자연수를 차례로 더하여 구해진 값을 삼각수라고 합니다.\n",
+    "# 예를 들어 7번째 삼각수는 1 + 2 + 3 + 4 + 5 + 6 + 7 = 28이 됩니다.\n",
+    "# 이런 식으로 삼각수를 구해 나가면 다음과 같습니다.\n",
+    "\n",
+    "# 1, 3, 6, 10, 15, 21, 28, 36, 45, 55, ...\n",
+    "# 이 삼각수들의 약수를 구해 봅시다.\n",
+    "\n",
+    "#  1: 1\n",
+    "#  3: 1, 3\n",
+    "#  6: 1, 2, 3, 6\n",
+    "# 10: 1, 2, 5, 10\n",
+    "# 15: 1, 3, 5, 15\n",
+    "# 21: 1, 3, 7, 21\n",
+    "# 28: 1, 2, 4, 7, 14, 28\n",
+    "# 위에서 보듯이, 5개 이상의 약수를 갖는 첫번째 삼각수는 28입니다.\n",
+    "\n",
+    "# 그러면 500개 이상의 약수를 갖는 가장 작은 삼각수는 얼마입니까?\n",
+    "\n",
+    "# 삼각수 n\n",
+    "# n = input(\"Enter number: \")\n",
+    "# def genfact(n):\n",
+    "#     t = []\n",
+    "#     for i in range(1, n+1):\n",
+    "#         if n%i == 0:  # n을 i로 나누었을 떄 0인 i값 = 약수 을 t에 담는 함수 genfact 즉 약수인 수 담는 함수\n",
+    "#             t.append(i)\n",
+    "#     return t\n",
+    "\n",
+    "# print (\"Numbers of divisors: \", len(genfact(n)))\n",
+    "# print\n",
+    "\n",
+    "# m = input(\"Enter the number of triangle numbers to check: \")\n",
+    "# print\n",
+    "# for i in range (2, m+2):   \n",
+    "#     a = sum(range(i))     # i를 .. \n",
+    "#     b = len(genfact(a))  # b= 약수의 개수 \n",
+    "#     if b > 500:\n",
+    "#         print (a)\n",
+    "\n",
+    "\n",
+    "# n을 i로 나누었을 떄 0인 i값 = 약수 을 t에 담는 함수 genfact 즉 약수인 수 담는 함수\n",
+    "\n",
+    "# n = 0\n",
+    "# def divisor(n):\n",
+    "#     t=[]\n",
+    "#     for i in range(1, n+1):\n",
+    "#         if n % i == 0:\n",
+    "#             t.append(i)\n",
+    "#     return t\n",
+    "\n",
+    "# m=input()\n",
+    "# for i in range(2, m+2):\n",
+    "#     sum = sum + i\n",
+    "#     a = len(divisor(sum))\n",
+    "#     if a < 500:\n",
+    "#         print (sum)\n",
+    "\n",
+    "\n",
+    "# break\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
