--- a/lesson2.ipynb
+++ b/lesson2.ipynb
@@ -322,32 +322,7 @@
     }
    ],
    "source": [
-    "#okay 이제 장시간... import 부터,, \n",
-    "import datetime\n",
     "\n",
-    "# class, module 개념 알기\n",
-    "#  \n",
-    "\n",
-    "\n",
-    "class Time:\n",
-    "    def __init__(self):\n",
-    "        self.timezone = '-5'\n",
-    "        self.initial_date = datetime.datetime(2019,1,1)\n",
-    "        self.timelist = {\n",
-    "            \"pre_start\" : 3,\n",
-    "            \"pre_end\" : 9.5,\n",
-    "            \"main_start\" : 9.5,\n",
-    "            \"main_end\" : 16,\n",
-    "            \"post_start\" : 16,\n",
-    "            \"post_end\" : 18\n",
-    "        }\n",
-    "        self.pre_market_start_time =    self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['pre_start']))\n",
-    "        self.pre_market_end_time =      self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['pre_end']))\n",
-    "        self.main_market_start_time =   self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['main_start']))\n",
-    "        self.main_market_end_time =     self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['main_end']))\n",
-    "        self.post_market_start_time =   self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['post_start']))\n",
-    "        self.post_market_end_time =     self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['post_end']))\n",
-    "        # print ( self.pre_market_start_time, self.pre_market_end_time, self.main_market_start_time, self.main_market_end_time, self.post_market_start_time, self.post_market_end_time)\n",
     "    def verb_noun(self):\n",
     "        pass\n",
     "    def value_get_from_list(self):\n",
@@ -377,46 +352,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "캐릭터가 생성되었습니다.inyoung님 반갑습니다.\n",
-      "1\n",
-      "왼 팔은 정상입니다.\n",
-      "None\n",
-      "몬스터에게 공격 당했습니다. 데미지 0.3\n",
-      "0.7\n",
-      "왼 팔이 부상당했습니다.\n",
-      "None\n",
-      "포션을 먹고 회복되었습니다\n",
-      "1.0\n"
+      "캐릭터가 생성되었습니다.inyoung님 반갑습니다.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'self' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\4028\\Documents\\python\\lesson1\\lesson2.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 36>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000004?line=30'>31</a>\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mleft_arm \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0.3\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000004?line=34'>35</a>\u001b[0m inyoung \u001b[39m=\u001b[39m human()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000004?line=35'>36</a>\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39mhead \u001b[39m=\u001b[39m \u001b[39m0.5\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000004?line=36'>37</a>\u001b[0m \u001b[39mprint\u001b[39m(inyoung\u001b[39m.\u001b[39mleft_arm)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000004?line=37'>38</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m왼 팔은 정상입니다.\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'self' is not defined"
      ]
     }
    ],
    "source": [
     "class human:\n",
     "    def __init__(self):\n",
-    "        self.left_arm = 1\n",
-    "        self.right_arm = 1\n",
-    "        self.left_leg = 1\n",
-    "        self.right_leg = 1\n",
+    "        self.arm = {\n",
+    "            \"left_arm\" : 1 ,\n",
+    "            \"right_arm\" : 1 \n",
+    "        }\n",
+    "        self.leg = {\n",
+    "            \"left_leg\" : 1 , \n",
+    "            \"right_leg\" : 1\n",
+    "        }\n",
+    "        self.body = 1\n",
+    "        self.head = 1\n",
+    "        self.heart = 1\n",
     "        self.hair_style = ['curved','straight'] \n",
-    "\n",
     "        print('캐릭터가 생성되었습니다.{user_name}님 반갑습니다.'.format(user_name = 'inyoung'))\n",
     "\n",
     "    def get_damage(self):\n",
-    "        if self.left_arm >= 0.3:\n",
-    "            self.left_arm -= 0.3\n",
+    "        if self.arm >= 0.5 :\n",
+    "            self.arm -= 0.3 \n",
+    "        elif self.leg >= 0.5 :\n",
+    "            self.leg -=0.3\n",
+    "        elif self.body >= 0.4:\n",
+    "            self.body -= 0.4\n",
+    "        elif self.head >= 0.3:\n",
+    "            self.head -= 0.8\n",
+    "        elif self.heart >=0.3:\n",
+    "            self.heart -= 1\n",
     "\n",
     "    def get_hp_potion(self):\n",
     "        if self.left_arm <= 1 :\n",
     "            self.left_arm += 0.3\n",
-    "inyoung = human()\n",
     "\n",
+    "\n",
+    "\n",
+    "inyoung = human()\n",
+    "self.head = 0.5\n",
     "print(inyoung.left_arm)\n",
     "print('왼 팔은 정상입니다.')\n",
     "print(inyoung.get_damage())\n",
@@ -426,12 +420,7 @@
     "print(inyoung.get_hp_potion())\n",
     "print('포션을 먹고 회복되었습니다')\n",
     "print(inyoung.left_arm)\n",
-    "\n",
-    "class currency:\n",
-    "  def __init__(self):\n",
-    "    self.initial_date = '2019.01.01'\n",
-    "    self.money_unit = 'won'\n",
-    "    self.money_amount = 10 ** 8"
+    "\n"
    ]
   },
   {
@@ -440,11 +429,15 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2497839122.py, line 18)",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'datetime.datetime' and 'datetime.datetime'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [1]\u001b[1;36m\u001b[0m\n\u001b[1;33m    if < self.uad <     :   # self.uad가 매년 3월 마지막 일요일 ~ 10월 마지막 일요일 사이이면\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\4028\\Documents\\python\\lesson1\\lesson2.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 49>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=44'>45</a>\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpost_end_time \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39muad \u001b[39m+\u001b[39m datetime\u001b[39m.\u001b[39mtimedelta(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtimelist[\u001b[39m'\u001b[39m\u001b[39mpost_end\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=45'>46</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m start_summer \u001b[39m&\u001b[39m end_summer\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=48'>49</a>\u001b[0m t \u001b[39m=\u001b[39m Time_()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=49'>50</a>\u001b[0m \u001b[39mprint\u001b[39m(t\u001b[39m.\u001b[39msummer_period())\n",
+      "\u001b[1;32mc:\\Users\\4028\\Documents\\python\\lesson1\\lesson2.ipynb Cell 9'\u001b[0m in \u001b[0;36mTime_.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=5'>6</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39muad \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mutc_date \u001b[39m+\u001b[39m datetime\u001b[39m.\u001b[39mtimedelta(hours\u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m5\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=6'>7</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39muad_summer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mutc_date \u001b[39m+\u001b[39m datetime\u001b[39m.\u001b[39mtimedelta(hours\u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m4\u001b[39m)    \u001b[39m#utc_america_date\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=7'>8</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39minitial_date \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49muad \u001b[39m+\u001b[39;49m datetime\u001b[39m.\u001b[39;49mdatetime(\u001b[39m2019\u001b[39;49m,\u001b[39m1\u001b[39;49m,\u001b[39m1\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=8'>9</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtimelist \u001b[39m=\u001b[39m {\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=9'>10</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mpre_start\u001b[39m\u001b[39m\"\u001b[39m : \u001b[39m4\u001b[39m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=10'>11</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mpre_end\u001b[39m\u001b[39m\"\u001b[39m : \u001b[39m9.5\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=14'>15</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mpost_end\u001b[39m\u001b[39m\"\u001b[39m : \u001b[39m18\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=15'>16</a>\u001b[0m }\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000008?line=16'>17</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msummer_start_month \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m4\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'datetime.datetime' and 'datetime.datetime'"
      ]
     }
    ],
@@ -452,9 +445,9 @@
     "import datetime\n",
     "class Time_:\n",
     "    def __init__(self):\n",
-    "        self.utc_date = datetime.utcnow()\n",
+    "        self.utc_date = datetime.datetime.utcnow()\n",
     "        self.ukd = self.utc_date + datetime.timedelta(hours= 9)    #utc_korea_date\n",
-    "        self.uad_not_summer = self.utc_date + datetime.timedelta(hours= -5)    #utc_america_date\n",
+    "        self.uad = self.utc_date + datetime.timedelta(hours= -5)\n",
     "        self.uad_summer = self.utc_date + datetime.timedelta(hours= -4)    #utc_america_date\n",
     "        self.initial_date = self.uad + datetime.datetime(2019,1,1)\n",
     "        self.timelist = {\n",
@@ -465,57 +458,100 @@
     "            \"post_start\" : 16,\n",
     "            \"post_end\" : 18\n",
     "        }\n",
-    "    def summer_time(self):\n",
-    "        \"\"\"\n",
-    "        썸머타임일 때와 아닐 때 장시간 설정\n",
-    "        썸머타임 기간: self.uad가 매년3월 마지막일요일 ~ 10월 마지막일요일 사이일 때 장시간 설정\n",
-    "        썸머타임 기간 아닐 때: self.uad가 매년3월 마지막일요일 ~ 10월 마지막일요일 사이가 아닐 때 장시간 설정\n",
-    "        \"\"\"\n",
-    "        if < self.uad <  :\n",
-    "              self.pre_start_time_summer = self.uad_summer + datetime.timedelta(self.timelist['pre_start'])\n",
-    "              self.pre_end_time_summer = self.uad_summer + datetime.timedelta(self.timelist['pre_end'])\n",
-    "              self.main_start_time_summer = self.uad_summer + datetime.timedelta(self.timelist['main_start'])\n",
-    "              self.main_end_time_summer = self.uad_summer + datetime.timedelta(self.timelist['main_end'])       \n",
-    "              self.post_start_time_summer = self.uad_summer + datetime.timedelta(self.timelist['post_start'])\n",
-    "              self.post_end_time_summer = self.uad_summer + datetime.timedelta(self.timelist['post_end'])\n",
-    "        elif self.uad < or self.uad >    :\n",
-    "              self.pre_start_time = self.uad + datetime.timedelta(self.timelist['pre_start'])\n",
-    "              self.pre_end_time = self.uad + datetime.timedelta(self.timelist['pre_end'])\n",
-    "              self.main_start_time = self.uad + datetime.timedelta(self.timelist['main_start'])\n",
-    "              self.main_end_time = self.uad + datetime.timedelta(self.timelist['main_end'])       \n",
-    "              self.post_start_time = self.uad + datetime.timedelta(self.timelist['post_start'])\n",
-    "              self.post_end_time = self.uad + datetime.timedelta(self.timelist['post_end'])\n",
+    "        self.summer_start_month = '4'\n",
+    "        self.summer_end_month = '10'\n",
+    "        self.year = datetime.datetime.utc.year()\n",
+    "    #     \"\"\"\n",
+    "    #     썸머타임일 때와 아닐 때 현재 장시간 설정\n",
+    "    #     썸머타임 기간: self.uad가 매년3월 마지막일요일 ~ 10월 마지막일요일 사이일 때 장시간 설정\n",
+    "    #     썸머타임 기간 아닐 때: self.uad가 매년3월 마지막일요일 ~ 10월 마지막일요일 사이가 아닐 때 장시간 설정\n",
+    "    #     \"\"\"\n",
+    "    # start_summer, end_summer에 self 필요할지?\n",
+    "    def summer_period(self):    \n",
+    "        a =  datetime.datetime(self.year,self.summer_start_month,1)\n",
+    "        b = datetime.datetime(self.year,self.summer_end_month ,1)\n",
+    "        start_summer = a - datetime.timedelta(days = a.isoweekday())\n",
+    "        end_summer = b - datetime.timedelta(days = b.isoweekday())\n",
     "\n",
-    "    return (summer_time)\n"
+    "        if start_summer < self.uad < end_summer : \n",
+    "            self.pre_start_time_summer = self.uad_summer + datetime.timedelta(self.timelist['pre_start'])\n",
+    "            self.pre_end_time_summer = self.uad_summer + datetime.timedelta(self.timelist['pre_end'])\n",
+    "            self.main_start_time_summer = self.uad_summer + datetime.timedelta(self.timelist['main_start'])\n",
+    "            self.main_end_time_summer = self.uad_summer + datetime.timedelta(self.timelist['main_end'])       \n",
+    "            self.post_start_time_summer = self.uad_summer + datetime.timedelta(self.timelist['post_start'])\n",
+    "            self.post_end_time_summer = self.uad_summer + datetime.timedelta(self.timelist['post_end'])\n",
+    "        elif self.uad < start_summer or self.uad > end_summer :\n",
+    "            self.pre_start_time = self.uad + datetime.timedelta(self.timelist['pre_start'])\n",
+    "            self.pre_end_time = self.uad + datetime.timedelta(self.timelist['pre_end'])\n",
+    "            self.main_start_time = self.uad + datetime.timedelta(self.timelist['main_start'])\n",
+    "            self.main_end_time = self.uad + datetime.timedelta(self.timelist['main_end'])       \n",
+    "            self.post_start_time = self.uad + datetime.timedelta(self.timelist['post_start'])\n",
+    "            self.post_end_time = self.uad + datetime.timedelta(self.timelist['post_end'])\n",
+    "        return start_summer & end_summer\n",
+    "    \n",
+    "\n",
+    "t = Time_()\n",
+    "print(t.summer_period())\n",
+    "# print(start_summer, end_summer)\n",
+    "     \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0.24796826 0.88562262 0.97324599 0.94818574 0.85274943 0.06559838\n",
+      " 0.78754798 0.74506104 0.7442632  0.52907325]\n",
+      "0.6537844396317926\n",
       "2022-03-27 00:00:00\n",
       "2022-09-25 00:00:00\n"
      ]
     }
    ],
    "source": [
+    "# 구쌤 \n",
+    "# class _ def로 바꿔놓기 \n",
+    "# 변수명 다시 설정\n",
+    "\n",
+    "import datetime\n",
+    "from numpy.random import random\n",
+    "import numpy as np\n",
+    "\n",
+    "print(np.random.random(10))\n",
+    "# numpy.random.random\n",
+    "\n",
+    "a = random()\n",
+    "print(a)\n",
+    "\n",
+    "# month = 4\n",
+    "# start_summer = datetime.datetime(2022,month,1) - datetime.timedelta(days= datetime.datetime(2022,month,1).isoweekday())\n",
+    "# print(start_summer)\n",
+    "\n",
+    "\n",
+    "# month = 10\n",
+    "# first_day_of_april = datetime.datetime(2022,month,1).isoweekday()\n",
+    "# end_summer = datetime.datetime(2022,month,1) - datetime.timedelta(days=datetime.datetime(2022,month,1).isoweekday())\n",
+    "# print(end_summer)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import datetime\n",
     "\n",
-    "month = 4\n",
-    "first_day_of_april = datetime.datetime(2022,month,1).isoweekday()\n",
-    "new_datetime = datetime.datetime(2022,month,1) - datetime.timedelta(days=first_day_of_april)\n",
-    "print(new_datetime)\n",
-    "\n",
-    "\n",
-    "month = 10\n",
-    "first_day_of_april = datetime.datetime(2022,month,1).isoweekday()\n",
-    "new_datetime = datetime.datetime(2022,month,1) - datetime.timedelta(days=first_day_of_april)\n",
-    "print(new_datetime)\n"
+    "\n"
    ]
   }
  ],
